Se arregló la referencia a la bibliografía
La referencia de la bibliografía tenía un espacio extra

No encontraba la bibliografía

--- a/mainNotesTemplate.tex
+++ b/mainNotesTemplate.tex
@@ -71,7 +71,7 @@
 	%%%%%%% Bibliografía %%%%%%%%
 	\bibliographystyle{bst/IEEEtran.bst} 
 	\addcontentsline{toc}{chapter}{Referencias}  
-	\bibliography{bib/IEEEabrv,bib/IEEEreferencias.bib} 
+	\bibliography{bib/IEEEabrv,bib/IEEEreferences.bib} 
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	
 \end{document}
