--- a/chp/chapter2.tex
+++ b/chp/chapter2.tex
@@ -1,18 +1,83 @@
-\chapter{Introducción}
+\chapter{Programming tools}
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra sagittis sapien, mollis ornare dolor. Donec fermentum, justo vitae tristique accumsan, urna ex dignissim risus, vitae tempor ante arcu condimentum turpis. Vestibulum tincidunt nulla nec lacus laoreet porttitor. Donec placerat congue mi, cursus dictum dolor viverra vitae. Phasellus venenatis, sapien in congue ornare, augue quam rutrum justo, vel molestie arcu metus luctus urna. Praesent egestas et leo vel ullamcorper. Etiam porta lectus dolor, vitae commodo arcu posuere in. Duis cursus suscipit lacus et tempus. Ut aliquet porttitor tortor in accumsan. Fusce pretium erat non ante tempor ultrices. Donec lorem justo, tincidunt ac finibus sit amet, tempor et dui. Fusce fermentum tempor nisl in blandit. Nam eu neque accumsan, varius tortor in, dictum justo. Ut rutrum tempus tellus, at sollicitudin velit ullamcorper non. In vel velit diam. Sed eu lectus iaculis, porta nisi sit amet, faucibus odio.
 
-	\section{Sección 1}
-	
-	Quisque rhoncus sit amet ex id porttitor. Aenean faucibus lectus at leo commodo feugiat. Mauris blandit ipsum non accumsan euismod. Cras nisi nunc, ultricies vel tellus non, ultrices iaculis mauris. Phasellus lorem lorem, cursus nec enim in, porta interdum arcu. Fusce ut imperdiet odio. Sed imperdiet eget enim at pellentesque.
-	
-	\section{Sección 2}
-	
-	Vestibulum sollicitudin imperdiet nisl. Nullam eget nisi nunc. Quisque eget accumsan lorem, nec interdum neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam at metus dignissim, euismod diam in, maximus sem. Sed semper rhoncus lectus eu tempor.
-	
-	\section{Sección 3}
-	
-	Phasellus bibendum dignissim efficitur. Vestibulum venenatis leo in lorem blandit dignissim. Praesent scelerisque dapibus lectus vel efficitur. Fusce tristique nulla at tempor eleifend. Vivamus ullamcorper volutpat lorem. Integer sodales molestie cursus. Aliquam felis mi, ultricies nec ante a, tincidunt semper nulla. In convallis finibus nibh id ultrices.
+\section{Listings}
 
-	\section{Sección 4}
-	Quisque ligula ex, semper eu tristique sit amet, accumsan vitae eros. Proin sodales hendrerit metus sit amet tincidunt. Etiam dictum cursus tellus id malesuada. Integer accumsan augue eu lectus consectetur, vel interdum turpis posuere. Pellentesque pellentesque lacinia enim, semper consectetur sem lacinia in. Etiam bibendum tristique justo ac blandit. Curabitur vitae dapibus odio, tempus ornare dolor. Maecenas dui urna, luctus at auctor at, tincidunt non eros. Proin euismod, lacus nec faucibus congue, orci magna vulputate est, quis tempus orci urna eget justo. Nulla a placerat turpis.
+
+	\subsection*{Listing Inline}
+	
+	% So we don't create weird spacing for single words.
+	\lstset{breaklines=false}
+	
+	You can use the \ttfamily{\textbackslash listinline\$command\$} to use the custom
+	eclipse style markup in paragraphs.  The 8 basic types in Java are
+	\lstinline$boolean$, \lstinline$byte$, \lstinline$char$,
+	\lstinline$short$, \lstinline$int$, \lstinline$long$,
+	\lstinline$float$, and \lstinline$double$. These should have been
+	properly formatted in the previous sentence.
+	
+	% Make sure to break lines the rest of the document
+	\lstset{breaklines=true}
+	
+	\subsection*{Block Listing Example}
+	
+	A slightly longer block example is shown in listing \ref{lst:simple}.
+	
+	\begin{lstlisting}[caption={A simple listing.}, label={lst:simple}]
+	/**
+	* @param args
+	*             Program arguments
+	*/
+	public static void main(String[] args) {
+	// Now for the enlightening message.
+	System.out.println("Hmm... hello big world!";
+	// @TODO Finish this example
+	// Just some comment that is probably too long to fit in the space provided....
+	}
+	\end{lstlisting}
+	
+	\subsection*{File Listing Example}
+	
+	An example that includes a \ttfamily{.java} file is shown in listing \ref{lst:file}.
+	
+	\lstinputlisting[caption={A listing from the file
+		\ttfamily{Rectangle.java}}, label={lst:file}]{rsc/code/Rectangle.java}
+	
+	\lstinputlisting[caption={A listing from the file
+		\ttfamily{Rectangle.java}}, label={lst:file}]{rsc/code/Person.java}
+	
+	\lstinputlisting[caption={A listing from the file
+		\ttfamily{Rectangle.java}}, label={lst:file}, language=XML]{rsc/code/document.xml}
+	
+	\lstinputlisting[caption={A listing from the file
+		\ttfamily{Rectangle.java}}, label={lst:file}, language=Groovy]{rsc/code/build.gradle}
+	
+\begin{lstlisting}[caption={Some Java code},label={lst:label},style=terminal]
+select dd.data from dane dd 
+\end{lstlisting}
+		
+\begin{lstlisting}[caption={A simple listing.}, label={lst:simple}, language=XML]
+<project>
+	<groupId>com.pluralsight</groupId>
+	<artifactId>HelloWorld</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<modelVersion>4.0.0</modelVersion>
+	<packaging>jar</packaging>
+</project>
+	\end{lstlisting}
+\section{MenuKeys}
+
+	\subsection{Menu}
+
+	Para crear un nuevo proyecto, una vez abierto el Spring Tool Suite \menu{File > New > Spring Starter Project > ...}, como se muestra en la imagen. Si no aparece la opción Spring Starter Project, \menu{File > New > Other > Spring Boot > Spring Starter Project > ...}
+	
+	\subsection{Directory}
+	
+	\directory{C:/Users/mauoc/OneDrive/Notes/NotesTemplate}
+	
+	\subsection{keys}
+	
+	\keys{\ctrl+C} equals \keys{\ctrl + C}.
+	
+	
