--- a/chp/chapter2.tex
+++ b/chp/chapter2.tex
@@ -10,8 +10,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra sagittis sa
 	% So we don't create weird spacing for single words.
 	\lstset{breaklines=false}
 	
-	You can use the \ttfamily{\textbackslash listinline\$command\$} to use the custom
-	eclipse style markup in paragraphs.  The 8 basic types in Java are
+	You can use the \ttfamily{\textbackslash listinline\$ listing text\$} command to use the custom
+	eclipse style markup in paragraphs. To change the style of \ttfamily{\textbackslash listinline} command, you should alter the parameter \ttfamily{\textbackslash lstset} in \ttfamily{lstcustom.sty} file.  The 8 basic types in Java are
 	\lstinline$boolean$, \lstinline$byte$, \lstinline$char$,
 	\lstinline$short$, \lstinline$int$, \lstinline$long$,
 	\lstinline$float$, and \lstinline$double$. These should have been
