--- a/chp/chapter2.tex
+++ b/chp/chapter2.tex
@@ -102,7 +102,161 @@
 
 \chapter{Programming tools}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra sagittis sapien, mollis ornare dolor. Donec fermentum, justo vitae tristique accumsan, urna ex dignissim risus, vitae tempor ante arcu condimentum turpis. Vestibulum tincidunt nulla nec lacus laoreet porttitor. Donec placerat congue mi, cursus dictum dolor viverra vitae. Phasellus venenatis, sapien in congue ornare, augue quam rutrum justo, vel molestie arcu metus luctus urna. Praesent egestas et leo vel ullamcorper. Etiam porta lectus dolor, vitae commodo arcu posuere in. Duis cursus suscipit lacus et tempus. Ut aliquet porttitor tortor in accumsan. Fusce pretium erat non ante tempor ultrices. Donec lorem justo, tincidunt ac finibus sit amet, tempor et dui. Fusce fermentum tempor nisl in blandit. Nam eu neque accumsan, varius tortor in, dictum justo. Ut rutrum tempus tellus, at sollicitudin velit ullamcorper non. In vel velit diam. Sed eu lectus iaculis, porta nisi sit amet, faucibus odio.
+Herramientas para mostrar código, comandos, etc.
+
+\section{Código}
+
+Puedes utilizar el siguiente comando para mostrar código dentro de un párrafo de texto:
+
+\begin{lstlisting}[caption={A simple listing.}, label={lst:simple}]
+	\lstinline$<codigo en linea>$
+\end{lstlisting}
+
+
+
+
+\subsection{Eclipse (Java)}
+
+	\begin{lstlisting}[style=eclipse]
+/**
+* @author John Doe
+* @param args Command line arguments
+*/
+@Override
+public static void main(String[] args) {
+	String message = "Hello World";
+	// TODO: Add more functionality
+	System.out.println(message);
+}
+	\end{lstlisting}
+	
+\subsection{Black}
+	
+	\begin{lstlisting}[style=black]
+public class Example {
+	private int value;
+	public void setValue(int v) {
+		this.value = v;
+	}
+}
+	\end{lstlisting}
+	
+\subsection{Terminal.}
+
+	\begin{lstlisting}[style=terminal]
+$ git clone https://github.com/user/repo.git
+$ cd repo
+$ npm install
+	\end{lstlisting}
+	
+	
+
+\lstinputlisting[style=terminal, caption={Terminal Style Demo}, label={lst:terminal}]{rsc/code/terminal-demo.txt}
+
+
+
+\subsection{HTML 5.}
+
+	\begin{lstlisting}[language=HTML5]
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Mi Página</title>
+</head>
+<body>
+	<div class="container">
+		<h1>Título Principal</h1>
+		<p>Este es un párrafo de ejemplo.</p>
+	</div>
+</body>
+</html>
+	\end{lstlisting}
+
+\subsection{CSS.}
+
+	\begin{lstlisting}[language=CSS]
+.container {
+	margin: 0 auto;
+	padding: 20px;
+	background-color: #fff;
+	position: relative;
+	width: 100%;
+}
+
+.header {
+	font-weight: bold;
+	color: #333;
+}
+	\end{lstlisting}
+	
+\subsection{Htmlcss (Combinado).}
+
+	\begin{lstlisting}[style=htmlcssjs]
+<!DOCTYPE html>
+<html>
+<head>
+	<style>
+		.button {
+			transition: all 0.3s ease;
+			transform: scale(1);
+		}
+	</style>
+</head>
+<body>
+	<script>
+		function handleClick() {
+			var btn = document.querySelector('.button');
+			btn.style.transform = 'scale(1.1)';
+		}
+	</script>
+</body>
+</html>
+	\end{lstlisting}
+
+\subsection{Javascript.}
+
+	\begin{lstlisting}[language=JavaScript]
+function calculateSum(a, b) {
+	if (typeof a !== 'number' || typeof b !== 'number') {
+		throw new Error('Parameters must be numbers');
+	}
+	return a + b;
+}
+
+// Test the function
+var result = calculateSum(5, 3);
+console.log(result);
+	\end{lstlisting}
+
+\subsection{XML.}
+
+	\begin{lstlisting}[language=XML, extendedchars=true]
+<?xml version="1.0" encoding="UTF-8"?>
+<configuration xmlns="http://example.com/schema">
+	<!-- Configuración del servidor -->
+	<server id="main">
+		<host>localhost</host>
+		<port>8080</port>
+	</server>
+</configuration>
+	\end{lstlisting}
+
+\subsection{Groovy.}
+
+	\begin{lstlisting}[language=Groovy]
+def numbers = [1, 2, 3, 4, 5]
+def doubled = numbers.collect { it * 2 }
+numbers.each { num ->
+	println "Number: $num"
+}
+
+def map = [name: 'John', age: 30]
+map.each { key, value ->
+	println "$key: $value"
+}
+	\end{lstlisting}
+
+
 
 \section{Listings}
 
