--- a/rsc/pckg/lstcustom.sty
+++ b/rsc/pckg/lstcustom.sty
@@ -25,6 +25,23 @@
 % Use the ttfamily font here will be used below
 \newcommand{\lstfontfamily}{\ttfamily}
 
+\lstset{
+	literate=%
+	{á}{{\'a}}1
+	{é}{{\'e}}1
+	{í}{{\'i}}1
+	{ó}{{\'o}}1
+	{ú}{{\'u}}1
+	{Á}{{\'A}}1
+	{É}{{\'E}}1
+	{Í}{{\'I}}1
+	{Ó}{{\'O}}1
+	{Ú}{{\'U}}1
+	{ñ}{{\~n}}1
+	{Ñ}{{\~N}}1
+	{¿}{{?`}}1
+	{¡}{{!`}}1
+}
 
 % Some useful colors...
 \definecolor{darkviolet}{rgb}{0.5,0,0.4}
@@ -43,7 +60,7 @@
 \definecolor{lineNumberColor}{rgb}{0.47,0.47,0.47}
 
 % Colors htmlcssjs
-\definecolor{lightgray}{rgb}{0.95, 0.95, 0.95}
+\definecolor{lightgray}{rgb}{0.92, 0.92, 0.92}
 \definecolor{darkgray}{rgb}{0.4, 0.4, 0.4}
 %\definecolor{purple}{rgb}{0.65, 0.12, 0.82}
 \definecolor{editorGray}{rgb}{0.95, 0.95, 0.95}
@@ -176,11 +193,27 @@
   showstringspaces=false
 }
 
-\lstdefinestyle{terminal}
-{
-	basicstyle=\color{gray}\ttfamily,
+% Terminal/Command line style
+\definecolor{terminalBg}{rgb}{0.12,0.12,0.12}
+\definecolor{terminalText}{rgb}{0.8,0.8,0.8}
+\definecolor{terminalPrompt}{rgb}{0.4,0.8,0.4}
+\definecolor{terminalCommand}{rgb}{0.9,0.9,0.5}
+\definecolor{terminalOutput}{rgb}{0.7,0.7,0.7}
+
+\lstdefinestyle{terminal}{
+	basicstyle=\small\ttfamily\color{black},
+	backgroundcolor=\color{lightgray},
 	breaklines=true,
-	postbreak=\mbox{\textcolor{red}{$\hookrightarrow$}\space}		
+	postbreak=\mbox{\textcolor{red}{$\hookrightarrow$}\space},
+	frame=single,
+	framerule=0.5pt,
+	rulecolor=\color{darkgray},
+	showstringspaces=false,
+	tabsize=4,
+	xleftmargin=0.5cm,
+	xrightmargin=0.5cm,
+	comment=[l]{\#},
+	commentstyle=\color{commentColor}
 }
 
 % use proper tt font that supports bold printing, e.g. by
