--- a/gls/glossary.tex
+++ b/gls/glossary.tex
@@ -1,7 +1,9 @@
 \newglossaryentry{Linux}
 {
-  name=Linux,
-  description={is a generic term referring to the family of Unix-like
-               computer operating systems that use the Linux kernel},
-  plural=Linuces
+	name=linux,
+	description={is a generic term referring to the family of Unix-like
+		computer operating systems that use the Linux kernel},
+	plural=linuces
 }
+
+\newacronym{page quality}{PQ}{Page Quality}
