--- a/mainNotesTemplate.tex
+++ b/mainNotesTemplate.tex
@@ -18,9 +18,10 @@
 % Incluir imágenes en LaTeX
 \usepackage{graphicx}
 
+% Árbol de directorios
+\usepackage{dirtree}
 
-
-
+\usepackage{subcaption}
 
 % Entorno más moderno para generar tablas con muchas opciones y con mejor compatibilidad que tabularx
 \usepackage{tabularray}
