Se agregan definiciones

--- a/mainNotesTemplate.tex
+++ b/mainNotesTemplate.tex
@@ -15,6 +15,12 @@
 \usepackage{amsmath} 
 % Simbolos matematicos (por lo tanto)
 \usepackage{amssymb} 
+% Para separar definiciones de teoremas
+\usepackage{amsthm}
+
+\theoremstyle{definition}
+\newtheorem{definition}{Definición}[chapter]
+
 % Incluir imágenes en LaTeX
 \usepackage{graphicx}
 
