--- a/chp/chapter1.tex
+++ b/chp/chapter1.tex
@@ -162,7 +162,18 @@
 	
 	Vestibulum sollicitudin imperdiet nisl. Nullam eget nisi nunc. Quisque eget accumsan lorem, nec interdum neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam at metus dignissim, euismod diam in, maximus sem. Sed semper rhoncus lectus eu tempor.
 	
-	\section{Sección 3}
+	
+	
+	
+	
+\section{Definicioines.}
+
+La definición se fibration \ref{def:fibration} se muestra a continuación
+
+\begin{definition}[Fibration]
+	\label{def:fibration}
+	A fibration is a mapping between two topological spaces that has the homotopy lifting property for every space \(X\).
+\end{definition}
 	
 	Phasellus bibendum dignissim efficitur. Vestibulum venenatis leo in lorem blandit dignissim. Praesent scelerisque dapibus lectus vel efficitur. Fusce tristique nulla at tempor eleifend. Vivamus ullamcorper volutpat lorem. Integer sodales molestie cursus. Aliquam felis mi, ultricies nec ante a, tincidunt semper nulla. In convallis finibus nibh id ultrices.
 
